# Mini-Ignition

./: README.md  pyproject.toml
examples/: demo.py  generated_hw_spec.json  mini_ignition_colab_demo.ipynb
mini_ignition/: __init__.py
mini_ignition/codegen/: __init__.py  matmul_codegen.py  strategies.py
mini_ignition/probe/: characterize.py  fuzzer.py
mini_ignition/runtime/: __init__.py  controller.py  ladder.py  metrics.py  runner.py
mini_ignition/schemas/: hw_spec.py
mini_ignition/simulator/: __init__.py  device.py  isa.py  memory.py  program.py
tests/: test_codegen_matmul.py  test_controller.py  test_fuzzer.py  test_hw_spec.py  test_isa_scalar.py  test_isa_vector.py  test_ladder.py  test_memory.py  test_metrics.py  test_probe.py  test_runtime_runner.py
