[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-ignition"
version = "0.1.0"
description = "A toy hardware enablement stack for learning AI accelerator bring-up concepts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pydantic",
  "pytest",
  "rich",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
